tests/baselines/reference/intrinsics.errors.txt
intrinsics.ts(1,21): error TS2749: 'hasOwnProperty' refers to a value, but is being used as a type here. Did you mean 'typeof hasOwnProperty'?
intrinsics.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
intrinsics.ts(10,1): error TS2304: Cannot find name '__proto__'.


==== intrinsics.ts (3 errors) ====
    var hasOwnProperty: hasOwnProperty; // Error
                        ~~~~~~~~~~~~~~
!!! error TS2749: 'hasOwnProperty' refers to a value, but is being used as a type here. Did you mean 'typeof hasOwnProperty'?
    
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var __proto__;
        interface __proto__ {}
    
        class C<T extends { __proto__: __proto__ }> { }
    }
    
    __proto__ = 0; // Error, __proto__ not defined
    ~~~~~~~~~
!!! error TS2304: Cannot find name '__proto__'.
    m1.__proto__ = 0;
    
    class Foo<__proto__> { }
    var foo: (__proto__: number) => void;